fix: input clear on IE & Edge

--- a/_sass/common/_reset.scss
+++ b/_sass/common/_reset.scss
@@ -162,6 +162,9 @@ button {
 }
 
 input {
+  &::-ms-clear {
+    display: none;
+  }
   &:focus {
     outline: none;
   }
